--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tun-tap = "0.1.2"
+etherparse = "0.9.0"
+bitflags = "1.2.1"
+nix = "0.17.0"
